benchmark + small fixes