@@ -7,6 +7,18 @@ plugins {
 
 version = "1.0.0"
 
+applicationDefaultJvmArgs = ["--enable-preview"]
+
+mainClassName = 'ru.hw.blowfish.FxMain'
+jar {
+    manifest {
+        attributes 'Main-Class': 'ru.hw.blowfish.Main'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 repositories {
     jcenter()
 }
@@ -30,6 +42,10 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
 }
@@ -43,6 +59,10 @@ run {
     jvmArgs(['--enable-preview'])
 }
 
-
-mainClassName = "ru.hw.blowfish.Main"
-
+task(benchmark, dependsOn: 'classes', type: JavaExec) {
+    main = 'ru.hw.blowfish.benchmark.Benchmark'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs += ['-verbose:gc', '-XX:+TieredCompilation', '-Xms3096m']
+//    args 'mrhaki'
+//    systemProperty 'simple.message', 'Hello '
+}
